--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ verify_ssl = true
 [packages]
 django = "~=3.0.0"
 ipython = "*"
+django-taggit = "*"
+markdown = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.8"
